# python-pg

./: .wranglerignore  README.md  main.py  pyproject.toml  requirements.txt  vercel.json  wrangler.toml
.wrangler/cache/: cf.json
app/core/: config.py  security.py
app/database/: d1_client.py  db_client.py  services.py
app/routers/: analytics.py
app/schemas/: analytics.py
scripts/: create_tables.sql
