[project]
name = "python-pg"
version = "0.1.0"
description = "FastAPI Portfolio Analytics Engine on Cloudflare"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "pydantic",
    "httpx",
    "cloudflare"
]


[tool.uv]
managed = true


[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]