[project]
name = "python-pg"
version = "0.1.0"
description = "FastAPI Portfolio Analytics Engine on Cloudflare"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "pydantic",
  "httpx",
  "workers-runtime-sdk"
]


[tool.uv]
managed = true


[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]