[project]
name = "python-pg"
version = "0.1.0"
description = "FastAPI Portfolio Analytics Engine on Vercel + Neon"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "httpx",
  "pydantic",
  "pydantic-settings",
  "psycopg2-binary",
]

[tool.uv]
managed = true

[dependency-groups]
dev = [
  "workers-py",
  "workers-runtime-sdk"
]
